[package]
name = "nrelay"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nrelay"
path = "src/main.rs"

[dependencies]
nrelay_core = { path = "../nrelay_core" }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"
dirs = "5.0"
tabled = "0.15"
reqwest = { version = "0.12", features = ["json"] }
colored = "2.1"
which = "6.0"
