[package]
name = "nrelay_core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = "0.13"
